test/data/resolver/valid/unlabelled_via_multi_type.cypher
MATCH (a)-[r:AUTHORED|LIKES]->(post:Post) RETURN a
