test/data/resolver/invalid/multi_type_edge.cypher
MATCH (p:Person)-[r:AUTHORED|LIKES]->(q:Post) RETURN r
